--- a/blackbox/package.json
+++ b/blackbox/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "bootstrap-icons": "^1.13.1",
     "sweetalert2": "^11.26.10",
     "vue": "^3.5.25"
   },
